--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: black !important;
+}
+
 .header {
   background: url("../images/background.jpg") repeat center center fixed;
   background-size: cover;
@@ -93,6 +97,52 @@ span {
     display: flex;
     text-align: center;
   }
+}
+
+.footer {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 15%;
+  padding-right: 15%;
+  background-color: dimgray;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+.footer .icons {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+.footer .icons a {
+  padding: 30px;
+}
+.footer .icons a img {
+  transform: scale(0.8);
+}
+
+hr {
+  border: 2px solid white;
+}
+
+.baniere {
+  background-color: white;
+  color: #000;
+  height: 40px;
+  width: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+  position: relative;
+  margin: auto;
+  top: 18px;
+  z-index: 1;
+}
+.baniere .col2 {
+  background-color: lightgray;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
