fusion body-main

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -5,6 +5,10 @@
 }
 body{
     background-color: black !important;
+
+    .container{
+        background-color: antiquewhite;
+    }
 }
 .header{
     background: url('../images/background.jpg') repeat center center fixed; 
