--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -19,6 +19,14 @@ section{
         width: 140px;
 
     }
+    .flex{
+        display: flex;
+        p{
+            color: #D78F0B;
+            
+
+        }
+    }
 }
 .header{
     background: url('../images/background.jpg') repeat center center fixed; 
@@ -58,8 +66,18 @@ li {
   section{
     .pourcentage {
         border: 1px solid black;
-        height: 25px;
-        width: 57px;
+        border-radius: 4px;
+        height: 30px;
+        width: 70px;
+        position: relative;
+        left: 70%;
+        top: 8%;
+        color: #D78F0B;
+        background-color: black;
+    }
+    .text{
+        position: relative;
+    top: -8%;
     }
   }
 
@@ -118,7 +136,9 @@ li {
     color: white;
     position: relative;
     
-
+p{
+    color: black;
+}
     .icons {
         display: inline-block;
         margin-bottom: 20px;
