--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,24 +7,54 @@
 body{
     background-color: black important;
     .container{
-        background-color:#fafafa;
+        .bg__white{
+            background-color:#fafafa;
+        }
+        
         
     }
 }
 
 section{
+        .pourcentage {
+            border: 1px solid black;
+            border-radius: 4px;
+            height: 30px;
+            width: 70px;
+            position: relative;
+            left: 70%;
+            top: 8%;
+            color: #D78F0B;
+            background-color: black;
+        }
+        .text{
+            position: relative;
+        top: -8%;
+        }
+        .top{
+            position: relative;
+            top: -6%;
+        
+        }
     button{
         background-color: #000;
         color: white;
         width: 140px;
+        height: 30px;
+        border: none;
 
     }
     .flex{
-        display: flex;
+        display: flex; 
+        
         p{
             color: #D78F0B;
-            
-
+            position: relative;
+            left: 5%;
+            font-size: 21px;
+        }
+        s{
+            font-size: 21px;
         }
     }
 }
@@ -63,23 +93,7 @@ li {
   span {
     color: orange;
   }
-  section{
-    .pourcentage {
-        border: 1px solid black;
-        border-radius: 4px;
-        height: 30px;
-        width: 70px;
-        position: relative;
-        left: 70%;
-        top: 8%;
-        color: #D78F0B;
-        background-color: black;
-    }
-    .text{
-        position: relative;
-    top: -8%;
-    }
-  }
+ 
 
 
 #parag-1{
@@ -137,7 +151,7 @@ li {
     position: relative;
     
 p{
-    color: black;
+    color: white;
 }
     .icons {
         display: inline-block;
@@ -158,7 +172,7 @@ p{
     background-color: white;
     color: #000;
     height: 40px ;
-    width: 400px;
+    width: 512px;
     display: flex;
     justify-content: space-around;
     align-items: center;
