--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -10,6 +10,9 @@ body {
 body .container .bg__white {
   background-color: #fafafa;
 }
+body .text-center {
+  width: 70%;
+}
 
 section .pourcentage {
   border: 1px solid black;
@@ -17,7 +20,7 @@ section .pourcentage {
   height: 30px;
   width: 70px;
   position: relative;
-  left: 70%;
+  left: 78%;
   top: 8%;
   color: #D78F0B;
   background-color: black;
@@ -166,14 +169,14 @@ span {
 }
 
 hr {
-  border: 2px solid white;
+  border: 4px solid white;
 }
 
 .baniere {
   background-color: white;
   color: #000;
   height: 40px;
-  width: 512px;
+  width: 50%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -182,12 +185,25 @@ hr {
   margin: auto;
   top: 18px;
   z-index: 1;
+  font-size: 15px;
 }
 .baniere .col2 {
   background-color: lightgray;
   height: 10px;
   width: 10px;
   border-radius: 50%;
+}
+@media only screen and (max-width: 992px) {
+  .baniere {
+    width: 100%;
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .baniere {
+    width: 100%;
+    font-size: 10px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
