--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,9 +10,11 @@ body{
         .bg__white{
             background-color:#fafafa;
         }
-        
-        
     }
+    .text-center{
+        width: 70%;
+    }
+    
 }
 
 section{
@@ -22,7 +24,7 @@ section{
             height: 30px;
             width: 70px;
             position: relative;
-            left: 70%;
+            left: 78%;
             top: 8%;
             color: #D78F0B;
             background-color: black;
@@ -165,14 +167,14 @@ p{
     }
   }
   hr{
-    border: 2px solid white;
+    border: 4px solid white;
 }
 
 .baniere {
     background-color: white;
     color: #000;
     height: 40px ;
-    width: 512px;
+    width: 50%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -182,6 +184,7 @@ p{
     // left: 33%;
     top: 18px;
     z-index: 1;
+    font-size: 15px;
     
      .col1{
 
@@ -192,4 +195,14 @@ p{
         width: 10px;
         border-radius: 50%;
      }
+
+
+    @media only screen and (max-width: 992px ){
+        width: 100%;
+        font-size: 13px;
+    }
+    @media only screen and (max-width: 576px ){
+        width: 100%;
+        font-size: 10px;
+    }
 }
